# agentofpoem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: main.mdc
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: claude.yml
data/: de-textgrid.jsonl  es-disco.jsonl  fr-poesie.jsonl  it-dante.jsonl  ja-hyakunin.jsonl  zh-classics.jsonl
eval/: queries.jsonl
poemferry/: __init__.py  app.py  config.py  corpus.py  fragments.py  lexical.py  llm.py  models.py  retriever.py  swarm.py  vectors.py
poemferry/static/: index.html
scripts/: build_embeddings.py  deploy.sh  enrich.py  eval_retrieval.py  ingest_aozora.py  ingest_chinese.py  ingest_collection.py  ingest_english.py  ingest_french.py  ingest_german.py  ingest_italian.py  ingest_japanese.py  ingest_spanish.py  ingest_waka.py  spike_colbert.py  spike_deepscan.py
tests/: test_fragments.py  test_swarm.py
